--- a/client/styles.css
+++ b/client/styles.css
@@ -23,11 +23,12 @@ img {
 }
 
 body {
-    background: lightyellow url("https://i.kinja-img.com/gawker-media/image/upload/s--Nk9NLFlX--/c_scale,fl_progressive,q_80,w_800/mi9zse6qavxkmhfmmv1i.jpg")fixed center;
-    /* background: cover; */
+    background: lightyellow url(https://i.kinja-img.com/gawker-media/image/upload/s--Nk9NLFlX--/c_scale,fl_progressive,q_80,w_800/mi9zse6qavxkmhfmmv1i.jpg)fixed center;
+    background-size: 80% 80%;
     background-repeat: no-repeat;
-    background-size: 1000px;
+    background-size: 1500px;
 }
+
 .header, img {
     outline: 5px dashed navajowhite;
     padding: 5px;
